--- a/index.html
+++ b/index.html
@@ -12,15 +12,16 @@
             font-family: sans-serif; color: white; text-align: center;
         }
         .card {
-            background: rgba(255, 255, 255, 0.2); padding: 40px 20px; border-radius: 30px;
+            background: rgba(255, 255, 255, 0.25); padding: 40px 20px; border-radius: 30px;
             backdrop-filter: blur(10px); width: 85%; max-width: 400px;
-            border: 1px solid rgba(255,255,255,0.4);
+            border: 1px solid rgba(255,255,255,0.4); box-shadow: 0 10px 30px rgba(0,0,0,0.1);
         }
-        .heart { font-size: 70px; animation: pulse 1.5s infinite; margin-bottom: 10px; }
+        .heart { font-size: 70px; animation: pulse 1.5s infinite; margin-bottom: 15px; display: inline-block; }
         @keyframes pulse { 0% {transform: scale(1);} 50% {transform: scale(1.1);} 100% {transform: scale(1);} }
         button { 
-            background: white; color: #ff6b6b; border: none; padding: 15px 30px; 
-            border-radius: 50px; font-weight: bold; font-size: 18px; cursor: pointer; margin-top: 20px;
+            background: white; color: #ff6b6b; border: none; padding: 15px 35px; 
+            border-radius: 50px; font-weight: bold; font-size: 19px; cursor: pointer; margin-top: 20px;
+            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
         }
     </style>
 </head>
@@ -33,26 +34,25 @@
         <button onclick="calMuzik()">🎵 Şarkıyı Başlat</button>
     </div>
 
-    <audio id="muzikDosyasi">
-        <source src="./dip.mp3" type="audio/mpeg">
-    </audio>
+    <audio id="muzikDosyasi"></audio>
 
     <script>
         function calMuzik() {
             var sarki = document.getElementById("muzikDosyasi");
             
-            // Proje klasör adını ekleyerek yolu garantiye alıyoruz
-            sarki.src = "/Canim-annem/dip.mp3"; 
+            // SENİN kullanıcı adın ve depo adınla doğrudan link oluşturduk
+            // Bu link şarkıyı direkt GitHub sunucusundan çeker
+            sarki.src = "https://raw.githubusercontent.com/manequinman58-cmd/Canim-annem/main/dip.mp3"; 
             
             sarki.play().then(() => {
                 alert("Seni çok seviyorum anneciğim! ❤️");
             }).catch(error => {
-                // Hata devam ederse alternatif yolu dene
+                // Eğer hata verirse alternatif kısa yolu dene
                 sarki.src = "dip.mp3";
                 sarki.play().then(() => {
                     alert("Seni çok seviyorum anneciğim! ❤️");
                 }).catch(e => {
-                    alert("Müzik hala yüklenemedi. Lütfen internet bağlantını kontrol et veya biraz bekle.");
+                    alert("Müzik hala yüklenemedi. Lütfen internetini kontrol et ve tekrar bas.");
                 });
             });
         }
